load("//tools/bazel:archiva.bzl", "archiva_module")

archiva_module(
    name = "archiva-repository-scanner",
    test_deps = [
        "//archiva-modules/archiva-base/archiva-common",
        "//archiva-modules/archiva-base/archiva-filelock",
        "//archiva-modules/archiva-base/archiva-repository-layer",
        "//archiva-modules/archiva-base/archiva-test-utils",
        "@maven//:org_mockito_mockito_core",
        "//archiva-modules/archiva-base/archiva-configuration/archiva-configuration-provider",
        "//archiva-modules/archiva-base/archiva-consumers/archiva-consumer-api",
        "//archiva-modules/archiva-base/archiva-repository-admin/archiva-repository-admin-api",
        "//archiva-modules/archiva-base/archiva-repository-api",
        "//archiva-modules/archiva-base/archiva-storage-api",
        "//archiva-modules/archiva-base/archiva-storage-fs",
        "//archiva-modules/archiva-maven/archiva-maven-metadata",
        "//archiva-modules/metadata/metadata-model",
        "@maven//:commons_io_commons_io",
        "@maven//:javax_inject_javax_inject",
        "@maven//:junit_junit",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_hamcrest_hamcrest_core",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_springframework_spring_beans",
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_core",
        "@maven//:org_springframework_spring_test",
    ],
    runtime_test_deps = [
        "@maven//:org_apache_logging_log4j_log4j_slf4j_impl",
        "@maven//:org_apache_logging_log4j_log4j_core",
        "@maven//:org_apache_logging_log4j_log4j_jcl",
        "@maven//:commons_beanutils_commons_beanutils",
        "//third_party/archiva-components/spring-registry-commons",
        "//third_party/archiva-components/spring-cache-ehcache",
        # Provides the RepositoryProvider Spring bean the tests autowire.
        "//archiva-modules/archiva-maven/archiva-maven-repository",
        # archiva-maven-proxy's spring-context.xml wires wagon#http -> HttpWagon.
        "@maven//:org_apache_maven_wagon_wagon_http",
        "@maven//:org_apache_maven_wagon_wagon_http_lightweight",
        "@maven//:org_apache_maven_wagon_wagon_http_shared",
        "@maven//:org_apache_httpcomponents_httpcore",
    ],
    deps = [
        "//archiva-modules/archiva-base/archiva-common",
        "//archiva-modules/archiva-base/archiva-configuration/archiva-configuration-provider",
        "//archiva-modules/archiva-base/archiva-consumers/archiva-consumer-api",
        "//archiva-modules/archiva-base/archiva-repository-admin/archiva-repository-admin-api",
        "//archiva-modules/archiva-base/archiva-repository-api",
        "//archiva-modules/archiva-base/archiva-storage-api",
        "//third_party/archiva-components/spring-registry-api",
        "@maven//:jakarta_xml_bind_jakarta_xml_bind_api",
        "@maven//:javax_inject_javax_inject",
        "@maven//:org_apache_commons_commons_collections4",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_springframework_spring_beans",
        "@maven//:org_springframework_spring_context",
    ],
)
