load("//tools/bazel:archiva.bzl", "archiva_module")

archiva_module(
    name = "archiva-storage-api",
    deps = [
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_slf4j_slf4j_api",
    ],
    test_deps = [
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_mockito_mockito_junit_jupiter",
    ],
    test_framework = "jupiter",
)
