load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "archiva-test-utils",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:junit_junit",
        "@maven//:org_junit_platform_junit_platform_console_standalone",
        "@maven//:org_springframework_spring_test",
        "@maven//:org_xmlunit_xmlunit_core",
    ],
)
