load("//tools/bazel:archiva.bzl", "archiva_module")

archiva_module(
    name = "archiva-test-utils",
    deps = [
        "@maven//:junit_junit",
        "@maven//:org_junit_platform_junit_platform_console_standalone",
        "@maven//:org_springframework_spring_test",
        "@maven//:org_xmlunit_xmlunit_core",
    ],
)
