load("//tools/bazel:archiva.bzl", "archiva_module")

archiva_module(
    name = "archiva-maven-common",
    deps = [
        "//archiva-modules/archiva-base/archiva-proxy-api",
        "@maven//:javax_inject_javax_inject",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_apache_maven_wagon_wagon_provider_api",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_springframework_spring_beans",
        "@maven//:org_springframework_spring_context",
    ],
)
