load("//tools/bazel:archiva.bzl", "archiva_module")

archiva_module(
    name = "archiva-maven-indexer",
    # Tests pull in repository-statistics + Redback memory impls + JPA + sisu/guice -
    # a substantial Spring context surface for full-stack integration tests.
    skip_tests = True,
    deps = [
        "//archiva-modules/archiva-base/archiva-common",
        "//archiva-modules/archiva-base/archiva-configuration/archiva-configuration-provider",
        "//archiva-modules/archiva-base/archiva-filelock",
        "//archiva-modules/archiva-base/archiva-model",
        "//archiva-modules/archiva-base/archiva-proxy",
        "//archiva-modules/archiva-base/archiva-proxy-api",
        "//archiva-modules/archiva-base/archiva-repository-api",
        "//archiva-modules/archiva-base/archiva-repository-layer",
        "//archiva-modules/archiva-base/archiva-storage-api",
        "//archiva-modules/archiva-base/archiva-storage-fs",
        "//archiva-modules/archiva-maven/archiva-maven-common",
        "@maven//:commons_io_commons_io",
        "@maven//:jakarta_annotation_jakarta_annotation_api",
        "@maven//:javax_inject_javax_inject",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_apache_maven_indexer_indexer_core_shaded_lucene",
        "@maven//:org_apache_maven_wagon_wagon_http",
        "@maven//:org_apache_maven_wagon_wagon_http_shared",
        "@maven//:org_apache_maven_wagon_wagon_provider_api",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_springframework_spring_context",
    ],
)
