load("//tools/bazel:archiva.bzl", "archiva_module")

archiva_module(
    name = "archiva-maven-metadata",
    deps = [
        "//archiva-modules/archiva-base/archiva-model",
        "//archiva-modules/archiva-base/archiva-repository-api",
        "//archiva-modules/archiva-base/archiva-storage-api",
        "//archiva-modules/archiva-base/archiva-xml-tools",
        "//archiva-modules/metadata/metadata-model",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_springframework_spring_context",
    ],
)
