load("//tools/bazel:archiva.bzl", "archiva_module")

archiva_module(
    name = "archiva-maven-proxy",
    # Tests pull in maven-indexer + Jetty for end-to-end transfer tests;
    # punted until the indexer surface is wired (same reason as
    # archiva-maven-repository).
    skip_tests = True,
    deps = [
        "//archiva-modules/archiva-base/archiva-proxy",
        "//archiva-modules/archiva-base/archiva-proxy-api",
        "//archiva-modules/archiva-base/archiva-repository-api",
        "//archiva-modules/archiva-base/archiva-repository-layer",
        "//archiva-modules/archiva-base/archiva-storage-api",
        "//archiva-modules/archiva-maven/archiva-maven-common",
        "@maven//:javax_inject_javax_inject",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_apache_maven_wagon_wagon_provider_api",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_springframework_spring_context",
    ],
)
