load("//tools/bazel:archiva.bzl", "archiva_module")

archiva_module(
    name = "archiva-maven-repository",
    # Tests pull in the maven-indexer (Nexus indexer + shaded Lucene) and
    # wagon transport stack -- a separate ~10-artifact addition that's not
    # needed to unblock archiva-repository-scanner.
    skip_tests = True,
    deps = [
        "//archiva-modules/archiva-base/archiva-checksum",
        "//archiva-modules/archiva-base/archiva-common",
        "//archiva-modules/archiva-base/archiva-configuration/archiva-configuration-model",
        "//archiva-modules/archiva-base/archiva-configuration/archiva-configuration-provider",
        "//archiva-modules/archiva-base/archiva-event-api",
        "//archiva-modules/archiva-base/archiva-filelock",
        "//archiva-modules/archiva-base/archiva-model",
        "//archiva-modules/archiva-base/archiva-policies",
        "//archiva-modules/archiva-base/archiva-proxy",
        "//archiva-modules/archiva-base/archiva-proxy-api",
        "//archiva-modules/archiva-base/archiva-repository-admin/archiva-repository-admin-api",
        "//archiva-modules/archiva-base/archiva-repository-api",
        "//archiva-modules/archiva-base/archiva-repository-layer",
        "//archiva-modules/archiva-base/archiva-storage-api",
        "//archiva-modules/archiva-base/archiva-storage-fs",
        "//archiva-modules/archiva-maven/archiva-maven-common",
        "//archiva-modules/archiva-maven/archiva-maven-metadata",
        "//archiva-modules/archiva-maven/archiva-maven-model",
        "//archiva-modules/archiva-maven/archiva-maven-proxy",
        "//archiva-modules/archiva-scheduler/archiva-scheduler-repository-api",
        "//archiva-modules/metadata/metadata-model",
        "//archiva-modules/metadata/metadata-repository-api",
        "//archiva-modules/plugins/stage-repository-merge",
        "//third_party/archiva-components/spring-registry-api",
        "@maven//:commons_io_commons_io",
        "@maven//:jakarta_annotation_jakarta_annotation_api",
        "@maven//:javax_inject_javax_inject",
        "@maven//:org_apache_commons_commons_collections4",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_apache_httpcomponents_httpclient",
        "@maven//:org_apache_maven_maven_artifact",
        "@maven//:org_apache_maven_maven_core",
        "@maven//:org_apache_maven_maven_model",
        "@maven//:org_apache_maven_maven_model_builder",
        "@maven//:org_apache_maven_maven_repository_metadata",
        "@maven//:org_apache_maven_maven_resolver_provider",
        "@maven//:org_apache_maven_resolver_maven_resolver_api",
        "@maven//:org_apache_maven_resolver_maven_resolver_connector_basic",
        "@maven//:org_apache_maven_resolver_maven_resolver_impl",
        "@maven//:org_apache_maven_resolver_maven_resolver_spi",
        "@maven//:org_apache_maven_resolver_maven_resolver_util",
        "@maven//:org_apache_maven_wagon_wagon_provider_api",
        "@maven//:org_codehaus_plexus_plexus_utils",
        "@maven//:org_modelmapper_modelmapper",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_springframework_spring_context",
    ],
)
