load("//tools/bazel:archiva.bzl", "archiva_module")

archiva_module(
    name = "archiva-maven-repository",
    # Tests below assume Maven's target/test-repository or hit
    # `appserver.base` Spring placeholders. The custom classloader handles
    # getResource()-style lookups but not these hardcoded target/ paths.
    manual_tests = {
        "src/test/java/org/apache/archiva/maven/repository/content/MavenContentHelperTest.java": ["manual"],
        "src/test/java/org/apache/archiva/maven/repository/content/MavenRepositoryRequestInfoTest.java": ["manual"],
        "src/test/java/org/apache/archiva/maven/repository/merge/Maven2RepositoryMergerTest.java": ["manual"],
        "src/test/java/org/apache/archiva/maven/repository/metadata/storage/Maven2RepositoryMetadataResolverMRM1411RepoGroupTest.java": ["manual"],
        "src/test/java/org/apache/archiva/maven/repository/metadata/storage/Maven2RepositoryMetadataResolverMRM1411Test.java": ["manual"],
        "src/test/java/org/apache/archiva/maven/repository/metadata/storage/Maven2RepositoryMetadataResolverManagedReleaseTest.java": ["manual"],
        "src/test/java/org/apache/archiva/maven/repository/metadata/storage/Maven2RepositoryMetadataResolverManagedSnapshotTest.java": ["manual"],
        "src/test/java/org/apache/archiva/maven/repository/metadata/storage/Maven2RepositoryMetadataResolverTest.java": ["manual"],
        "src/test/java/org/apache/archiva/maven/repository/metadata/storage/MavenRepositoryMetadataReaderTest.java": ["manual"],
    },
    test_deps = [
        "//archiva-modules/archiva-base/archiva-checksum",
        "//archiva-modules/archiva-base/archiva-common",
        "//archiva-modules/archiva-base/archiva-configuration/archiva-configuration-model",
        "//archiva-modules/archiva-base/archiva-configuration/archiva-configuration-provider",
        "//archiva-modules/archiva-base/archiva-filelock",
        "//archiva-modules/archiva-base/archiva-model",
        "//archiva-modules/archiva-base/archiva-policies",
        "//archiva-modules/archiva-base/archiva-proxy",
        "//archiva-modules/archiva-base/archiva-proxy-api",
        "//archiva-modules/archiva-base/archiva-repository-api",
        "//archiva-modules/archiva-base/archiva-repository-layer",
        "//archiva-modules/archiva-base/archiva-storage-api",
        "//archiva-modules/archiva-base/archiva-storage-fs",
        "//archiva-modules/archiva-base/archiva-test-utils",
        "//archiva-modules/archiva-maven/archiva-maven-common",
        "//archiva-modules/archiva-maven/archiva-maven-metadata",
        "//archiva-modules/archiva-maven/archiva-maven-model",
        "//archiva-modules/archiva-maven/archiva-maven-proxy",
        "//archiva-modules/metadata/metadata-model",
        "//archiva-modules/metadata/metadata-repository-api",
        "//third_party/archiva-components/spring-registry-api",
        "@maven//:commons_io_commons_io",
        "@maven//:javax_inject_javax_inject",
        "@maven//:javax_xml_bind_jaxb_api",
        "@maven//:junit_junit",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_apache_maven_indexer_indexer_core_shaded_lucene",
        "@maven//:org_apache_maven_maven_artifact",
        "@maven//:org_apache_maven_maven_core",
        "@maven//:org_apache_maven_maven_model",
        "@maven//:org_apache_maven_wagon_wagon_http_shared",
        "@maven//:org_apache_maven_wagon_wagon_provider_api",
        "@maven//:org_apache_maven_resolver_maven_resolver_api",
        "@maven//:org_apache_maven_resolver_maven_resolver_connector_basic",
        "@maven//:org_apache_maven_resolver_maven_resolver_util",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_codehaus_plexus_plexus_utils",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_modelmapper_modelmapper",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_test",
        "@maven//:org_xmlunit_xmlunit_assertj3",
        "@maven//:org_xmlunit_xmlunit_core",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "//archiva-modules/archiva-base/archiva-repository-admin/archiva-repository-admin-api",
        "//archiva-modules/archiva-scheduler/archiva-scheduler-repository-api",
        "//third_party/archiva-components/spring-taskqueue",
    ],
    runtime_test_deps = [
        "@maven//:org_apache_logging_log4j_log4j_slf4j_impl",
        "@maven//:org_apache_logging_log4j_log4j_core",
        "@maven//:org_apache_logging_log4j_log4j_jcl",
        "@maven//:org_springframework_spring_beans",
        "@maven//:commons_beanutils_commons_beanutils",
        "//third_party/archiva-components/spring-registry-commons",
        "//third_party/archiva-components/spring-cache-ehcache",
        "@maven//:org_apache_maven_wagon_wagon_http",
        "@maven//:org_apache_maven_wagon_wagon_http_lightweight",
        "@maven//:org_apache_maven_wagon_wagon_http_shared",
        "@maven//:org_apache_httpcomponents_httpcore",
    ],
    deps = [
        "//archiva-modules/archiva-base/archiva-checksum",
        "//archiva-modules/archiva-base/archiva-common",
        "//archiva-modules/archiva-base/archiva-configuration/archiva-configuration-model",
        "//archiva-modules/archiva-base/archiva-configuration/archiva-configuration-provider",
        "//archiva-modules/archiva-base/archiva-event-api",
        "//archiva-modules/archiva-base/archiva-filelock",
        "//archiva-modules/archiva-base/archiva-model",
        "//archiva-modules/archiva-base/archiva-policies",
        "//archiva-modules/archiva-base/archiva-proxy",
        "//archiva-modules/archiva-base/archiva-proxy-api",
        "//archiva-modules/archiva-base/archiva-repository-admin/archiva-repository-admin-api",
        "//archiva-modules/archiva-base/archiva-repository-api",
        "//archiva-modules/archiva-base/archiva-repository-layer",
        "//archiva-modules/archiva-base/archiva-storage-api",
        "//archiva-modules/archiva-base/archiva-storage-fs",
        "//archiva-modules/archiva-maven/archiva-maven-common",
        "//archiva-modules/archiva-maven/archiva-maven-metadata",
        "//archiva-modules/archiva-maven/archiva-maven-model",
        "//archiva-modules/archiva-maven/archiva-maven-proxy",
        "//archiva-modules/archiva-scheduler/archiva-scheduler-repository-api",
        "//archiva-modules/metadata/metadata-model",
        "//archiva-modules/metadata/metadata-repository-api",
        "//archiva-modules/plugins/stage-repository-merge",
        "//third_party/archiva-components/spring-registry-api",
        "@maven//:commons_io_commons_io",
        "@maven//:jakarta_annotation_jakarta_annotation_api",
        "@maven//:javax_inject_javax_inject",
        "@maven//:org_apache_commons_commons_collections4",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_apache_httpcomponents_httpclient",
        "@maven//:org_apache_maven_maven_artifact",
        "@maven//:org_apache_maven_maven_core",
        "@maven//:org_apache_maven_maven_model",
        "@maven//:org_apache_maven_maven_model_builder",
        "@maven//:org_apache_maven_maven_repository_metadata",
        "@maven//:org_apache_maven_maven_resolver_provider",
        "@maven//:org_apache_maven_resolver_maven_resolver_api",
        "@maven//:org_apache_maven_resolver_maven_resolver_connector_basic",
        "@maven//:org_apache_maven_resolver_maven_resolver_impl",
        "@maven//:org_apache_maven_resolver_maven_resolver_spi",
        "@maven//:org_apache_maven_resolver_maven_resolver_util",
        "@maven//:org_apache_maven_wagon_wagon_provider_api",
        "@maven//:org_codehaus_plexus_plexus_utils",
        "@maven//:org_modelmapper_modelmapper",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_springframework_spring_context",
    ],
)
